Work on interfaces in the QSim  * change setLink/getLink in QVehicle to setLinkId/getLinkId, as all call sites would only extract the id from the link - This relieves us to keep a reference to the original link in the Distributed SimLinks  * Deprecate setLinkEnterTime/getLinkEnterTime in QVehicle. This method is not used anywhere.
Clean up:
 * make passengers array in QVehicleImpl lazy. Most of our vehicles don't have passengers, so don't initialize the list for each vehicle.
 * keep a modifiable copy of the plan in BasicPlanAgentImpl, as the unmodifiable copy is exchanged with a modifiable copy once the first activity is initialized.
 * Remove warninges in BasicPlanAgentImpl